--- a/main.html
+++ b/main.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Meditation App</title>
+  <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	 <div id="app">
+  <div id="app">
     <div class="vid-container">
-      <video id="video" src="videos/beach.mp4" autoplay loop></video>
+      <video id="videoPlayer" src="Videos/beach.mp4" loop autoplay></video>
     </div>
     <div class="player-container">
-      <audio id="audio" src="sounds/beach.mp3"></audio>
-      <div class="sound-picker">
-        <button id="sound1">Sound 1</button>
-        <button id="sound2">Sound 2</button>
-      </div>
+      <audio id="audioPlayer" src="Sounds/beach.mp3" loop></audio>
+    </div>
+    <div class="sound-picker">
+      <button id="sound1" class="selected">Sound A</button>
+      <button id="sound2">Sound B</button>
     </div>
     <div class="time-select">
       <button id="smaller-mins">2 min</button>
@@ -25,12 +22,9 @@
       <button id="long-mins">10 min</button>
     </div>
     <div class="time-display">10:00</div>
-    <button class="play">Play</button>
+    <button id="playPauseBtn" class="play">Play</button>
   </div>
-	
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <script src="script.js"></script>
 </body>
-
 </html>
