--- a/main.html
+++ b/main.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Meditation App</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
-  <div id="app">
-    <div class="vid-container">
-      <video id="videoPlayer" src="Videos/beach.mp4" loop autoplay></video>
-    </div>
-    <div class="player-container">
-      <audio id="audioPlayer" src="Sounds/beach.mp3" loop></audio>
-    </div>
-    <div class="sound-picker">
-      <button id="sound1" class="selected">Sound A</button>
-      <button id="sound2">Sound B</button>
-    </div>
-    <div class="time-select">
-      <button id="smaller-mins">2 min</button>
-      <button id="medium-mins">5 min</button>
-      <button id="long-mins">10 min</button>
-    </div>
-    <div class="time-display">10:00</div>
-    <button id="playPauseBtn" class="play">Play</button>
-  </div>
 
-  <script src="script.js"></script>
+<html>
+
+<head>
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+
+<body>
+	<div class="app">
+		<div class="vid-container">
+			<video id="meditationVideo" loop>
+				<source src="C:\Users\user\Downloads\stock-footage-phuket-thailand-tropical-beach-aerial-drone-top-down-view-bird-eye-view-of-sea-blue-waves-break-on.mp4" type="video/mp4">
+				<source src="C:\Users\user\Downloads\stock-footage--k-loop-rain-drops-falling-alpha-real-rain-high-quality-slow-rain-thunder-speedy-night.webm" type="video/mp4">
+			</video>
+		</div>
+		<div class="player-container">
+			<audio id="meditationAudio" loop>
+				<source src="C:\Users\user\Downloads\mixkit-sea-waves-with-birds-loop-1185.wav" type="audio/mp3">
+				<source src="C:\Users\user\Downloads\LVBN9P3-sunrise-birds.mp3" type="audio/mp3">
+			</audio>
+			<div class="sound-picker">
+				<button id="sound1" onclick="changeSound('beach.mp3')"><i class="fa-solid fa-sun"></i></button>
+				<button id="sound2" onclick="changeSound('rain.mp3')"><i class="fa-solid fa-cloud-rain"></i></button>
+			</div>
+		</div>
+		<div id="time-select">
+			<button id="smaller-mins">2 min</button>
+			<button id="medium-mins">5 min</button>
+			<button id="long-mins">10 min</button>
+		</div>
+		<div class="circle">
+			<button class="play" onclick="play()"><i class="fa-solid fa-play"></i></button>
+		</div>
+		<span class="time-display">10.0</span>
+	</div>
+    <script type="text/javascript" src="./script.js"></script>
 </body>
+
 </html>
